styles/main.css
/* Apply a natural box layout model to all elements, but allowing components to change
Credit: Paul Irish
*/
html {
    box-sizing: border-box;
}
*, *:before, *:after {
    box-sizing: inherit;
}

/* Global Styles */
:root {
    --red: #eb4827;
    --yellow: #ddd413;
    --blue: #0387c8;
    --pink: #f5dbd9;
    --darkgreen: #264d3b;
    --brown: #936B3B;
    --black: #000;
    --white: #fff;
}

body {
    font-family: forma-djr-deck, sans-serif;
    letter-spacing: .075rem;
    font-size: 1.4rem;
    position: relative;
    margin: 0;
}

.background{
    width: 150%;
    position: absolute;
    top: 0;
    left: 0;
    z-index: -10;

}

a {
    text-decoration: none;
    color: var(--black);
    border-bottom: 2px solid var(--yellow);
    font-weight: 500;
}

.button {
    background-color: var(--red);
    padding: .85rem 1.25rem;
    font-family: FatFrank, sans-serif;
    font-size: 1.25rem;
    color: var(--white);
    border: solid 2px white;
}

img {
    width: 100%;
}

h1, h2, h3, h4, h5 {
    line-height: 1.1em;
}

h1 {
    margin: 0;
}

h2 {
    font-family: fatfrank, sans-serif;
    font-size: 1.85em;
    color: var(--darkgreen);
}

h3 {
    font-family: fatfrank, sans-serif;
    font-size: 1.25em;
    color: var(--yellow);
}

h4 {
    font-family: fatfrank, sans-serif;
    font-size: .95em;
    color: var(--brown);
}

p {
    margin: 1em 0 2em 0;
    line-height: 2.25rem;
}

em {
    color: var(--blue);
    font-style: normal;
    line-height: 1.5;
}

.center-container {
    display: flex;
    flex-direction: column;
}
.center {
    margin: auto;
}

.col-container {
    display: flex;

}

.col-text {
    width: 52%;
}

.col-half {
    flex-basis: 50%;
}

.content-section {
    padding: 3em 0;
    position: relative;
}



/************************
 * Header Section Styling *
 ***********************/
header {
    display: flex;
    flex-direction: column;
}

h1 {
    padding: 1em .75em .25em .75em;
    width: fit-content;
}

.header-nav {
    margin: 0 .5em;
    padding: 0;
    background-color: var(--pink);
}

.header-nav ul {
    display: flex;
    justify-content: space-between;
    list-style-type: none;
    width: 100%;
    padding: 0;
    margin: 0 2em;
}

.nav-item {
    padding: 1em 1.5em;
    margin: 0;
    font-size: .75em;
}

.nav-item:hover {
    background-color: var(--red);
}

img.logo {
    width: 50%;
}

header a {
    border-bottom: none;
    width: fit-content;
    padding: 0;
}




/************************
 * Main Section Styling *
 ***********************/

main {
    width: 100%;
    padding: 2em 10%;
    margin: 0;
}



/************************
 * Footer Section Styling *
 ***********************/

/* Footer Section */
footer {
    text-align: right;
    padding: 2em 3em 1em 3em;
    margin: 0;
    width: 100%;
    height: fit-content;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    background-color: var(--darkgreen);
    color: white;
}

footer p {
    font-size: .65em;
    line-height: 1.45em;
    text-align: start;
    letter-spacing: .1em;
}

.social-icons {
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    padding: 0 0 0 1em;
}

.social-icons a {
    font-size: 1em;
    color: white;
    padding: .5em .5em .25em .5em;
    border-bottom: none;
}

.social-icons a:hover {
    color: var(--red);
}

